--- a/Computability/[Undone]Lab05-5130309717/Lab05-NumberingPrograms.tex
+++ b/Computability/[Undone]Lab05-5130309717/Lab05-NumberingPrograms.tex
@@ -64,17 +64,35 @@ CS363-Computability Theory, Xiaofeng Gao, Spring 2016}}
   \item
   \begin{enumerate}
     \item Find $P_{1028}$. Distinguish what are $\phi_{1028}(x)$ and $\phi_{1028}^{(n)}(x_1,\cdots,x_n)$ and their corresponding $W_{1028}(x)$, $E_{1028}(x)$ and $W^{(n)}_{1028}(x)$, $E^{(n)}_{1028}(x)$;
-    \item Let $P$ be the program J(1,2,4), Z(1), S(1). Calculate $\gamma(P)$.
     \begin{solution}
+    $ $\\
+    $P_{1028} = 2^{10} + 2^2$, so we can know that $a_1 = 2, a_2 = 7$.
+    Therefore, the instructions are T(1,1) and J(1,1,2).
+    \end{solution}
+    \item Let $P$ be the program J(1,2,4), Z(1), S(1). Calculate $\gamma(P)$.
+    \begin{solution} 
+    $ $ \\
     $ \beta(J(1,2,4)) = 4\zeta(1,2,4) + 3 = 4\pi(\pi(0,1),3) + 3  = 111 $ \\
     $ \beta(Z(1)) = 0 $\\
     $ \beta(S(1)) = 1 $\\
+    Thus, $\gamma(P) = 2^{111} + 2^{112} + 2^{114}$
     \end{solution}
   \end{enumerate}
 \item
 
 \begin{enumerate}
 \item (Cantor) Show that the set of all functions from $\mathbb{N}$ to $\mathbb{N}$ is not denumerable.
+\begin{proof}
+Define $\mathcal{F}$ as all the functions maps $\mathbb{N}$ to $\mathbb{N}$. Let $f_0$, $f_1$, $f_2$, . . . be any
+sequence of elements of $\mathcal{F}$ and by Cantor's Diagonal Method, we can define $f \in  \mathcal{F}$ by: \\
+\begin{displaymath}
+f(i) = \left\{ \begin{array}{ll}
+f_i(i)+1 & \textrm{if $f_i(n)$ is defined}\\
+0 & \textrm{otherwise} 
+\end{array} \right.
+\end{displaymath}
+
+\end{proof}
 \item Show that the set of all non-computable total functions from $\mathbb{N}$ to $\mathbb{N}$ is not denumerable.
 \end{enumerate}
 
